# csnet-DEMO

./: README.md  build-all.sh  build-client.sh  build-server.sh  csnet.sln
cfg/: client.cfg  server.cfg
client/: CMakeLists.txt  myclient.vcxproj  myclient.vcxproj.filters
client/sources/: clnapi.cpp  clnapi.h  main.cpp  mysettings.cpp  mysettings.h
server/: CMakeLists.txt  myserver.vcxproj  myserver.vcxproj.filters
server/sources/: daemon.cpp  daemon.h  expression.cpp  expression.h  main.cpp  myservice.cpp  myservice.h  mysettings.cpp  mysettings.h  server.cpp  server.h  srvapi.cpp  srvapi.h  threadpool.cpp  threadpool.h
shared/: cfgparser.cpp  cfgparser.h  csnet_api.cpp  csnet_api.h  datastream.h  logger.cpp  logger.h  packsock.cpp  packsock.h  settings.h  signals.h  singleton.h  socket.cpp  socket.h
